Revert "Fix overflow issues in React tags box"
This reverts commit f1ff40f5f5967caa3c52099cdc6470e47e22e6a6.

--- a/chrome/skin/default/zotero/overlay.css
+++ b/chrome/skin/default/zotero/overlay.css
@@ -288,7 +288,6 @@
 {
 	width: 338px;
 	min-width: 338px;
-	overflow-y: hidden;
 }
 
 #zotero-layout-switcher
