--- a/scss/components/_editable.scss
+++ b/scss/components/_editable.scss
@@ -8,10 +8,3 @@ textarea.editable-control {
 	font-family: inherit;
 	font-size: inherit;
 }
-
-.editable-content {
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	width: 100%;
-}
